tests/lang/eval-fail-missing-arg.err.exp
error:
       … from call site

         at /pwd/lang/eval-fail-missing-arg.nix:1:1:

            1| ({x, y, z}: x + y + z) {x = "foo"; z = "bar";}
             | ^
            2|

       error: function 'anonymous lambda' called without required argument 'y'

       at /pwd/lang/eval-fail-missing-arg.nix:1:2:

            1| ({x, y, z}: x + y + z) {x = "foo"; z = "bar";}
             |  ^
            2|
